--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+    <<: *default
+    adapter: postgresql
+    encoding: unicode
+    database: <%= ENV['DO_DB_NAME'] %>
+    username: <%= ENV['DO_USERNAME'] %>
+    password: <%= ENV['DO_PASSWORD'] %>
+    host: <%= ENV['DO_HOSTNAME'] %>
+    port: <%= ENV['DO_PORT'] %>
