--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.3",
-    "rails_admin": "3.0.0-rc3",
+    "@rails/webpacker": "^5.4.3",
+    "rails_admin": "3.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
